# aic

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
aic/: analyze.py  cli.py  cpg.py  db.py  skeleton.py  store.py  utils.py
aic/probes/: __init__.py  api.py  base.py  security.py  tests.py
bench/: RESULTS.md  run.py
tests/: test_aic.py  test_flow.py  test_skeleton.py  test_taint.py
tests/fixtures/: taint_cases.py
